Added multiple product retrieval and used multithreading